# AdventOfCode

2015/: pyproject.toml
2015/src/: day01.py  day02.py  day04.py  day05.py  day06.py
2015/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day08.py  test_day09.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day17.py
2015/util/: download_inputs.py
2018/rust/: Cargo.toml
2018/rust/src/: lib.rs
2019/: day01.py  day01_test.py  day02.py  day02_test.py  day04.py  day05.py  day06.py  day06_test.py
2023/: .clang-format  .clangd  README.md  WORKSPACE
2023/01/: 01.cc  01.h  01_test.cc  BUILD  day01.cpp  day01.hpp  main.cc  main.cpp
2023/01-tests/: _1_tests.mm
2023/02/: 02.cc  BUILD
2023/03/: 03.cc  BUILD
2023/04/: 04.cc  04.h  BUILD
2023/05/: 05.cc  05.h  05_test.cc  BUILD  main.cc
2023/06/: 06.cc  06.h  06_test.cc  BUILD  main.cc
2023/07/: 07.cc  07.h  07_test.cc  BUILD  main.cc
2023/08/: 08.cc  08.h  08_test.cc  BUILD  main.cc
2023/09/: 09.cc  09.h  09_test.cc  BUILD  main.cc
2023/10/: 10.cc  10.h  10_test.cc  BUILD  main.cc
2023/11/: 11.cc  11.h  11_test.cc  BUILD
2023/12/: 12.cc  12.h  12_test.cc  BUILD  main.cc
2023/13/: 13.cc  13.h  13_test.cc  BUILD  main.cc
2023/14/: 14.cc  (+3 more)
2024/: Package.resolved  Package.swift
2025/: 01.test.ts  01.ts  02.test.ts  02.ts  03.test.ts  03.ts  04.test.ts  04.ts  05.test.ts  05.ts  06.test.ts  06.ts  07.test.ts  07.ts  08.test.ts  08.ts  09.test.ts  09.ts  10.test.ts  10.ts  README.md
util/: download_inputs.py
(+164 files in other folders)
