[package]
name = "aoc2018"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.10"
regex = "1.9.5"

# lib proc-macro dependencies
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
